# Realtime_Voice_Control_Pipeline

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
scripts/: prepare_demo_assets.sh  run_demo.sh
src/app/: main.py
src/app/api/: router.py
src/app/api/routes/: audio.py  demo.py  health.py  live_audio.py  metrics.py  session.py  transcription.py
src/app/api/ws/: routes.py
src/app/cli/: demo_runner.py
src/app/core/: config.py  logging.py
src/app/models/: action.py  audio.py  demo.py  events.py  live_audio.py  llm.py  metrics.py  session.py  simulator.py  transcription.py  tts.py
src/app/services/: audio_store.py  connection_manager.py  demo_service.py  diagnostics_service.py  event_bus.py  execution_service.py  live_audio_service.py  metrics_collector.py  orchestrator.py  prompt_builder.py  session_manager.py  session_runtime.py  tracing.py  transcription_service.py  tts_service.py  utterance_queue.py
src/app/services/llm/: base.py  ollama.py
src/app/services/simulator/: base.py  low_fidelity.py
src/app/services/stt/: base.py  whisper_cpp.py
src/app/services/tts/: __init__.py  base.py  piper.py
tests/: test_audio_asset_http.py  test_continuous_demo_flow.py  test_demo_ui_http.py  test_end_to_end_diagnostics.py  test_execution_ws_flow.py  test_health.py  test_live_audio_http.py  test_llm_ws_flow.py  test_metrics_http.py  test_orchestrator.py  test_simulator.py  test_transcription_http.py  test_transcription_ws_flow.py  test_tts_service.py  test_tts_ws_flow.py  test_utterance_queue.py  test_ws_session.py
(+4 files in other folders)
