[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "local-voice-ai-pipeline"
version = "0.1.0"
description = "Local real-time voice AI pipeline scaffold"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.115,<1.0",
  "httpx>=0.28,<1.0",
  "pydantic-settings>=2.6,<3.0",
  "python-multipart>=0.0.17,<1.0",
  "python-dotenv>=1.0,<2.0",
  "uvicorn[standard]>=0.32,<1.0",
  "websockets>=12,<16",
]

[project.scripts]
local-voice-ai-demo = "app.cli.demo_runner:main"

[project.optional-dependencies]
dev = [
  "pytest>=8.3,<9.0",
  "ruff>=0.8,<1.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/app"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["B", "E", "F", "I", "UP"]
